[gd_scene load_steps=14 format=3 uid="uid://cedsbmo3056mg"]

[ext_resource type="Script" path="res://Scripts/Boards.gd" id="1_223rf"]
[ext_resource type="Texture2D" uid="uid://4md2ma5hxd04" path="res://Res/Sprites/Case.png" id="2_ecu3t"]
[ext_resource type="Texture2D" uid="uid://bu0tv6suj1uxa" path="res://Res/TileMap/Game_Tile.png" id="2_w7s5j"]
[ext_resource type="Texture2D" uid="uid://cukeatqx6qgw0" path="res://Res/Sprites/Case_filled.png" id="3_0mecy"]
[ext_resource type="Texture2D" uid="uid://drw527soskfvk" path="res://Res/Sprites/Case_crossed.png" id="5_8pgl0"]
[ext_resource type="Texture2D" uid="uid://dclxfmqnmjeek" path="res://Res/Sprites/selection.png" id="6_4xbim"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_at4wv"]
texture = ExtResource("2_w7s5j")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0

[sub_resource type="TileSet" id="TileSet_j547w"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_at4wv")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6577e"]
texture = ExtResource("2_ecu3t")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qpxej"]
texture = ExtResource("3_0mecy")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iiujj"]
texture = ExtResource("5_8pgl0")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bg0rs"]
texture = ExtResource("6_4xbim")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_h3ri3"]
tile_size = Vector2i(34, 34)
sources/0 = SubResource("TileSetAtlasSource_6577e")
sources/1 = SubResource("TileSetAtlasSource_qpxej")
sources/2 = SubResource("TileSetAtlasSource_iiujj")
sources/3 = SubResource("TileSetAtlasSource_bg0rs")

[node name="Board" type="Node2D"]
scale = Vector2(1.2, 1.2)
script = ExtResource("1_223rf")

[node name="BackgroundTileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_j547w")
cell_quadrant_size = 128
format = 2
layer_0/tile_data = PackedInt32Array(0, 65536, 4, 1, 131072, 4, 2, 131072, 4, 3, 65536, 4, 4, 131072, 4, 5, 65536, 4, 6, 131072, 4, 7, 65536, 4, 9, 65536, 4, 12, 65536, 4, 11, 131072, 4, 10, 131072, 4, 8, 131072, 4, 393216, 131072, 6, 393217, 131072, 6, 393218, 131072, 6, 393219, 131072, 6, 393220, 131072, 6, 393221, 131072, 6, 393222, 131072, 6, 393223, 131072, 6, 393224, 131072, 6, 393225, 131072, 6, 393226, 131072, 6, 393227, 131072, 6, 393228, 131072, 6, 327680, 0, 5, 327681, 0, 5, 327682, 0, 5, 327683, 0, 5, 327684, 0, 5, 327685, 0, 5, 327686, 0, 5, 327687, 0, 5, 327688, 0, 5, 327689, 0, 5, 327690, 0, 5, 327691, 0, 5, 327692, 0, 5, 327693, 0, 5)

[node name="BoardTileMap" type="TileMap" parent="."]
position = Vector2(0, 4.16666)
tile_set = SubResource("TileSet_h3ri3")
format = 2
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[node name="LabelRows" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="LabelRows"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="LabelCols" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="ColorRect2" type="ColorRect" parent="LabelCols"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)
